log/build_2024-06-23_15-33-15/my_py_pkg2/stderr.log
  File "/home/lucas/ros2_ws/install/my_py_pkg2/lib/python3.10/site-packages/my_py_pkg2/add_two_numbers_client.py", line 14
    	def call_add_two_ints_server(self, a, b)
    	                                        ^
SyntaxError: expected ':'

